tests/ok/str_fmt.ri
fn main() {
    assert!("true: {}".fmt(true) == "true: true".to_string());
    assert!("false: {}".fmt(false) == "false: false".to_string());
}
