tests/invalid/checker/check_trait.ri
trait ToStr {
    fn to_str1(&self) str;
}

fn my_print(v: ToStr) {
    _ = v.to_str1();
}

extend str for ToStr {
    fn to_str1(&self) str {
        return self.*;
    }
}

extend bool for ToStr {
    fn to_str1(&self) str {
        return if (self.*) "true" else "false";
    }
}

fn main() {
    my_print(""); // OK
    my_print(true); // OK
    my_print(1); // BAD
}
